--- a/build.gradle
+++ b/build.gradle
@@ -67,31 +67,31 @@ task regression_tests(type: Test) {
 
 task welcome_tests(type: Test) {
     useJUnitPlatform {
-        includeTags("welcome")
+        includeTags("welcomeScreen")
     }
 }
 
 task discovery_tests(type: Test) {
     useJUnitPlatform {
-        includeTags("discovery")
+        includeTags("discoveryScreen")
     }
 }
 
 task bookmarks_tests(type: Test) {
     useJUnitPlatform {
-        includeTags("bookmarks")
+        includeTags("bookmarksScreen")
     }
 }
 
 task privacy_tests(type: Test) {
     useJUnitPlatform {
-        includeTags("privacy")
+        includeTags("privacyScreen")
     }
 }
 
 task language_tests(type: Test) {
     useJUnitPlatform {
-        includeTags("languages")
+        includeTags("languagesScreen")
     }
 }
 
