--- a/build.gradle
+++ b/build.gradle
@@ -67,31 +67,31 @@ task regression_tests(type: Test) {
 
 task welcome_tests(type: Test) {
     useJUnitPlatform {
-        includeTags("welcomeScreen")
+        includeTags("welcome")
     }
 }
 
 task discovery_tests(type: Test) {
     useJUnitPlatform {
-        includeTags("discoveryScreen")
+        includeTags("discovery")
     }
 }
 
 task bookmarks_tests(type: Test) {
     useJUnitPlatform {
-        includeTags("bookmarksScreen")
+        includeTags("bookmarks")
     }
 }
 
 task privacy_tests(type: Test) {
     useJUnitPlatform {
-        includeTags("privacyScreen")
+        includeTags("privacy")
     }
 }
 
 task language_tests(type: Test) {
     useJUnitPlatform {
-        includeTags("languagesScreen")
+        includeTags("languages")
     }
 }
 
